Preparing for deployment

--- a/templates/dashboard/products_create.html
+++ b/templates/dashboard/products_create.html
@@ -32,7 +32,7 @@
                         <option value="in">
                             inches
                         </option>
-                        <option value="number" selected="selected">
+                        <option value="count" selected="selected">
                             Count
                         </option>
                     </select>
