--- a/templates/dashboard/report.html
+++ b/templates/dashboard/report.html
@@ -76,9 +76,9 @@
             <tbody>
                 {% for order in orders %}
                 <tr>
-                    <td>{{order.product.name}}</td>
+                    <td>{{order.item.name}}</td>
                     <td>{{ order.quantity }}</td>
-                    <td>{{order.product.unit_price}}</td>
+                    <td>{{order.item.unit_price}}</td>
                     <td>{{order.get_total}}</td>
                 </tr>
                 {% endfor %}
